[package]
name    = "orbit-db-http-client"
version = "0.1.0"
authors = ["Austin Baugh <austinsbaugh@gmail.com>"]
edition = "2018"

[dependencies]
async-std = "1.4"
async-attributes  = "1.1"
surf = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
url = "2.1"
anyhow = "1.0"
