[package]
name    = "orbit-db-http-client"
version = "0.1.0"
authors = ["Austin Baugh <austinsbaugh@gmail.com>"]
edition = "2018"

[dependencies]
async-std = "1.4"
surf = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
structopt = "0.3"
url = "2.1"
strum = "0.17.1"
strum_macros = "0.17.1"

[dev-dependencies]
async-attributes  = "1.1"
femme = "1.1.0"
log = "0.4.7"
